====================
2018/8/17 - 2018/8/31
v 6-0.51

- Now on branch Feldspar.
- Changed " != REAL_NULL " to "notNull" usages.
- Changed nomenclature:
-- ObjectBool is now BoolObject
-- ObjectString is now StringObject
-- ObjectInteger is now IntegerObject
-- ObjectDecimal is now DecimalNumObject
-- FunctionContainer is now FunctionObject
-- ObjectList is now ListObject
- Created NumericObject parent class, inheriting Object.
-- Added enum value ObjectType::Numeric.
-- Changed IntegerObject to inherit NumericObject.
-- Changed DecimalObject to inherit NumericObject.
- Implemented NumericObject interface for IntegerObject. (Ported basicmath.cpp extension.)
- Implemented NumericObject interface for DecimalNumObject. (Ported basicmath.cpp extension.)
- Added system functions for numeric operations: _equals, _greater_than, _greater_or_equal, _abs, _add, _subtract, _multipy, _divide, incr, and decr, and implemented processing functions for them in the Engine.
- Added String::steal().
- Changed isObjectFunction() to isFunctionObject.
- Changed isObjectEmptyFunction() to isEmptyFunctionObject.
- Changed Engine::process_sys_are_number() to use isNumericObject().

Printer.h
- Updated to use Numeric for printing numbers instead of the usual Integer and Decimal types.


====================
2018/8/6
v 5-0.5

- Changed Variable::setFuncReturn(Object*, bool) to force variables to change functions when assigned data.
- Changed COPPER_LANG_VERSION to 3 to reflect changes in data storage in variables.


====================
2018/8/4 - 2018/8/5
v 5-0.44

- Fixed bug in Engine::run() that failed to return EngineResult::Done when at the end of the input stream.
- Fixed nasty bug in Scope that tried using temp variables to init the RefVariableStorage in the hash table.
- Changed RefVariableStorage management to allow sharing rather than copying. This also increases engine speed.


FileInStream
- atEOS() now checks the fail bits.
- getNextByte() now checks for the file being open.

